# LineraGame

./: .gitignore  10_PHASE_COMPLETION_SUMMARY.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_IMPLEMENTATION_PROGRESS.md  BUILDATHON_CHECKLIST.md  CLAUDE.md  COMPREHENSIVE_TEST_SUMMARY.md  Cargo.toml  DEMO.md  Dockerfile  FEATURES.md  GOD_LEVEL_EXECUTION_REPORT.md  LICENSE  MISSION_STATUS.md  MULTIPLAYER_ARCHITECTURE.md  MULTIPLAYER_IMPLEMENTATION.md  Makefile  PHASE_10_PRODUCTION_DEPLOYMENT.md  PHASE_5_6_TESTING_GUIDE.md  PHASE_8_STRESS_TESTING.md  PHASE_9_FINAL_VALIDATION.md  PUSH_TO_GITHUB.txt  QUICKSTART.md  README.md  READY_TO_TEST.md  SCREENSHOTS.md  SESSION_CONTINUATION_SUMMARY.md  SUBMISSION.md  TESTING_GUIDE.md  TEST_RESULTS.md  VERIFICATION_REPORT.md  compose.yaml  mock-backend-simple.js  mock-backend.js  package-lock.json  package.json  playwright.config.js  prepare-for-github.sh  run.bash  (+11 more)
abi/: Cargo.toml
abi/src/: combat.rs  economy.rs  enemy.rs  game.rs  lib.rs  pathfinding.rs  tower.rs  wave.rs
frontend/: confetti.js  config.json  effects.js  game.js  index.html  lobby.html  multiplayer.css  multiplayer.js  notifications.js  spectator-mode.js  styles.css  victory-screen.js
scripts/: run-all-tests.sh
src/: contract.rs  guards.rs  lib.rs  service.rs  state.rs
tests/: final-validation.spec.js  game_logic_test.rs  multiplayer-modes.spec.js  stress-tests.spec.js
